<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/meLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@drawable/selector_common_item"
        android:gravity="center_vertical"
        android:paddingRight="3dp">

        <ImageView
            android:id="@+id/portraitImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="@dimen/option_item_margin_right"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_header" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:singleLine="true"
                android:text="wfc"
                android:textColor="@color/gray0"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/accountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:text="@string/my_chat_account"
                android:textColor="@color/gray2"
                android:textSize="13sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="141dp">
        <ImageView
            android:id="@+id/iv_mine_head"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@mipmap/default_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:textColor="@color/black_4a4a4a"
                android:background="@mipmap/button_login"
                android:text="@string/charge"/>
            <TextView
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/black_4a4a4a"
                android:gravity="center"
                android:background="@mipmap/button_login"
                android:text="@string/cash_out"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallet"
            android:textSize="16sp"
            android:textColor="@color/black_4a4a4a"
            android:drawableLeft="@mipmap/icon_wallet"
            android:drawableRight="@mipmap/arraw_right"
            android:gravity="center_vertical"
            android:drawablePadding="14dp"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red_packet_records"
            android:textSize="16sp"
            android:textColor="@color/black_4a4a4a"
            android:drawableLeft="@mipmap/icon_red"
            android:drawableRight="@mipmap/arraw_right"
            android:gravity="center_vertical"
            android:drawablePadding="14dp"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_card"
            android:textSize="16sp"
            android:textColor="@color/black_4a4a4a"
            android:drawableLeft="@mipmap/icon_bankcard"
            android:drawableRight="@mipmap/arraw_right"
            android:gravity="center_vertical"
            android:drawablePadding="14dp"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:id="@+id/tv_mine_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="16sp"
            android:textColor="@color/black_4a4a4a"
            android:drawableLeft="@mipmap/icon_setting"
            android:drawableRight="@mipmap/arraw_right"
            android:gravity="center_vertical"
            android:drawablePadding="14dp"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>
    </LinearLayout>



</LinearLayout>